--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
+          <li><a href="pages/participate.html">Why participate</a></li>
+
 
           <li class="dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown"
