--- a/pages/event/tutorials.html
+++ b/pages/event/tutorials.html
@@ -52,6 +52,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="../../index.html">Home</a></li>
+          <li><a href="../participate.html">Why participate</a></li>
 
           <li class="dropdown  menu-active">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown"
@@ -94,7 +95,7 @@
         <div class="container wow fadeInUp">
           <div class="section-header">
             <h2> Tutorials</h2>
-              <p>We will be annoucing the Tutorials very soon</p>
+              <p>We will be annoucing the tutorials very soon</p>
               <p>Stay tuned!</p>
           </div>
           
