--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,6 +52,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="../index.html">Home</a></li>
+          <li><a href="participate.html">Why participate</a></li>
 
           <li class="dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown"
