--- a/pages/event/awards.html
+++ b/pages/event/awards.html
@@ -51,6 +51,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="../../index.html">Home</a></li>
+          <li><a href="../participate.html">Why participate</a></li>
 
           <li class="dropdown  menu-active">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown"
