--- a/pages/participate.html
+++ b/pages/participate.html
@@ -8,8 +8,8 @@
     <meta content="" name="description" />
 
     <!-- Favicons -->
-    <link href="../../img/icon.png" rel="icon" />
-    <link href="../../img/iconH.png" rel="apple-touch-icon" />
+    <link href="../img/icon.png" rel="icon" />
+    <link href="../img/iconH.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -18,22 +18,22 @@
     />
 
     <!-- Bootstrap CSS File -->
-    <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Libraries CSS Files -->
     <link
-      href="../../lib/font-awesome/css/font-awesome.min.css"
+      href="../lib/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <link href="../../lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="../../lib/venobox/venobox.css" rel="stylesheet" />
+    <link href="../lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="../lib/venobox/venobox.css" rel="stylesheet" />
     <link
-      href="../../lib/owlcarousel/assets/owl.carousel.min.css"
+      href="../lib/owlcarousel/assets/owl.carousel.min.css"
       rel="stylesheet"
     />
 
     <!-- Main Stylesheet File -->
-    <link href="../../css/style.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet" />
 
     <!-- =======================================================
     Theme Name: TheEvent
@@ -42,6 +42,7 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
   </head>
+
   <body>
     <!--==========================
     Header
@@ -51,16 +52,14 @@
         <div id="logo" class="pull-left">
           <!-- Uncomment below if you prefer to use a text logo -->
           <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-          <a href="../../index.html" class="scrollto"
-            ><img src="../../img/logo.png" alt="" title=""
+          <a href="../index.html" class="scrollto"
+            ><img src="../img/logo.png" alt="" title=""
           /></a>
         </div>
-
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../participate.html">Why participate</a></li>
-
+            <li><a href="../index.html">Home</a></li>
+            <li class="menu-active"><a href="#">Why participate</a></li>
             <li class="dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -73,19 +72,17 @@
                 Event
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="../event/committees.html"
+                <a class="dropdown-item" href="event/committees.html"
                   >Committees</a
                 >
-                <a class="dropdown-item" href="../event/keynotes.html"
-                  >Keynotes</a
-                >
-                <a class="dropdown-item" href="../event/tutorials.html"
+                <a class="dropdown-item" href="event/keynotes.html">Keynotes</a>
+                <a class="dropdown-item" href="event/tutorials.html"
                   >Tutorials</a
                 >
-                <a class="dropdown-item" href="../event/awards.html">Awards</a>
+                <a class="dropdown-item" href="event/Awards.html">Awards</a>
               </div>
             </li>
-            <li class="dropdown menu-active">
+            <li class="dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 data-toggle="dropdown"
@@ -97,21 +94,23 @@
                 Calls
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="papers.html">Call for papers</a>
-                <a class="dropdown-item" href="3mt.html">Call for 3MT</a>
-                <a class="dropdown-item active" href="#"
+                <a class="dropdown-item" href="calls/papers.html"
+                  >Call for papers</a
+                >
+                <a class="dropdown-item" href="calls/3mt.html">Call for 3MT</a>
+                <a class="dropdown-item" href="calls/dataChallenge.html"
                   >Call for Data challenge</a
                 >
-                <a class="dropdown-item" href="tutorials.html"
+                <a class="dropdown-item" href="calls/tutorials.html"
                   >Call for Tutorials</a
                 >
               </div>
             </li>
-            <li><a href="../program.html">Program</a></li>
-            <li><a href="../registration.html">Registration</a></li>
-            <li><a href="../sponsorship.html">Sponsorship</a></li>
-            <li><a href="../venue.html">Venue</a></li>
-            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="program.html">Program</a></li>
+            <li><a href="registration.html">Registration</a></li>
+            <li><a href="sponsorship.html">Sponsorship</a></li>
+            <li><a href="venue.html">Venue</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
         <!-- #nav-menu-container -->
@@ -121,20 +120,37 @@
 
     <main id="main" class="main-page">
       <!--==========================
-      papers Section
+    Why should you participate at IndabaX-Morocco Section
     ============================-->
       <section id="awards">
         <div class="container wow fadeInUp">
           <div class="section-header">
-            <h2>Data Challenge</h2>
-            <p>We will be annoucing the challenge very soon</p>
-            <p>Stay tuned!</p>
+            <h2>Why should you participate at IndabaX-Morocco?</h2>
+          </div>
+
+          <div class="section-content">
+            <ul>
+              <li>Networking with Moroccan AI community.</li>
+              <li>Meeting with AI experts including researchers and entrepreneurs.</li>
+              <li>Learn the basics or advanced topics of machine learning.</li>
+              <li>All participants will benefit from:
+                  <ul>
+                    <li>Free registration </li>
+                    <li>Certificate of participation</li>
+                  </ul>
+
+              </li>
+            </ul>
           </div>
         </div>
       </section>
-    </main>
+    </main>        
 
-    <!--==========================
+
+
+
+
+   <!--==========================
     Footer
   ============================-->
    <footer id="footer">
@@ -142,7 +158,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6 footer-info">
-            <img src="../../img/logo.png" alt="TheEvenet">
+            <img src="../img/logo.png" alt="TheEvenet">
             
           </div>
 
@@ -165,20 +181,21 @@
     </div>
 
   </footer><!-- #footer -->
+
     <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
     <!-- JavaScript Libraries -->
-    <script src="../../lib/jquery/jquery.min.js"></script>
-    <script src="../../lib/jquery/jquery-migrate.min.js"></script>
-    <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../../lib/easing/easing.min.js"></script>
-    <script src="../../lib/superfish/hoverIntent.js"></script>
-    <script src="../../lib/superfish/superfish.min.js"></script>
-    <script src="../../lib/wow/wow.min.js"></script>
-    <script src="../../lib/venobox/venobox.min.js"></script>
-    <script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../lib/jquery/jquery.min.js"></script>
+    <script src="../lib/jquery/jquery-migrate.min.js"></script>
+    <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/superfish/hoverIntent.js"></script>
+    <script src="../lib/superfish/superfish.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
+    <script src="../lib/venobox/venobox.min.js"></script>
+    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Main Javascript File -->
-    <script src="../../js/main.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
