--- a/pages/registration.html
+++ b/pages/registration.html
@@ -51,6 +51,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="../index.html">Home</a></li>
+          <li><a href="participate.html">Why participate</a></li>
           <li class="dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown"
                href="#" role="button" aria-haspopup="true" aria-expanded="false"> Event
