--- a/pages/sponsorship.html
+++ b/pages/sponsorship.html
@@ -59,6 +59,7 @@
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <li><a href="../index.html">Home</a></li>
+            <li><a href="participate.html">Why participate</a></li>
             <li class="dropdown">
               <a
                 class="nav-link dropdown-toggle"
