--- a/pages/calls/tutorials.html
+++ b/pages/calls/tutorials.html
@@ -118,79 +118,133 @@
     <!-- #header -->
 
     <main id="main" class="main-page">
-      <!--==========================
+    <!--==========================
       tutorials Section
     ============================-->
-      <section id="awards">
-        <div class="container wow fadeInUp">
-          <div class="section-header">
-            <h2>Call for Tutorials</h2>
-          </div>
+      <section class="wow fadeInUp">
+        <div class="container">
+            <section id="tutorials" class="section-without-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <h2>Call for Tutorials</h2>
+                  </div>
+                </div>
+            </section>
+          <div class="row">
+            <div class="col-lg-7">
+                <div class="container wow fadeInUp">
+                  <div class="section-content">
+                    <p>
+                      Indaba X Morocco 2019 invites for tutorial proposals for
+                      half-day (3 hours) on April 29, 2019. The tutorial program
+                      is intended to disseminate information to conference
+                      attendees on the state-of-the-art of Deep Learning. Indaba
+                      X Morocco aim to receive audiences from both academia and
+                      industry. This should be taken into consideration in the
+                      proposal. Tutorials may be lectures or interactive
+                      workshops and will be given by experts in the subject
+                      matter.
+                    </p>
+                    <h3>Submission guidelines</h3>
 
-          <div class="section-content">
-            <p>
-              Indaba X Morocco 2019 invites for tutorial proposals for half-day
-              (3 hours) on April 29, 2019. The tutorial program is intended to
-              disseminate information to conference attendees on the
-              state-of-the-art of Deep Learning. Indaba X Morocco aim to receive
-              audiences from both academia and industry. This should be taken
-              into consideration in the proposal. Tutorials may be lectures or
-              interactive workshops and will be given by experts in the subject
-              matter.
-            </p>
-            <h3>Submission guidelines</h3>
+                    <p>
+                      Submissions should include the following elements:
+                    </p>
+                    <ul>
+                      <li>
+                        Detailed contact information of all presenters (and
+                        indication of the main contact person)
+                      </li>
+                      <li>
+                        Brief biography (max. 2 paragraphs) for each presenter,
+                        highlighting relevant experience in presenting
+                        tutorials, teaching classes, etc.
+                      </li>
+                      <li>Title of the tutorial</li>
+                      <li>Short abstract (300 words)</li>
+                      <li>
+                        Intended audience (introductory, intermediate, advanced)
+                        and prerequisite knowledge or skills required
+                      </li>
+                      <li>Previous offering of the tutorial</li>
+                      <li>
+                        An extended abstract (no longer than 2 pages) that
+                        include the following sections:
+                        <ul>
+                          <li>Motivation</li>
+                          <li>Brief outline of the topics to be covered</li>
+                          <li>Links to related resources</li>
+                          <li>
+                            Type of support materials to be supplied to
+                            attendees.
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
+            <div class="col-lg-5">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <h2>
+                      <a
+                        href="https://goo.gl/forms/R9da5M5hb0rodCm22"
+                        class="btn btn-outline-primary btn-lg"
+                        >Apply for Tutorial</a
+                      >
+                    </h2>
+                  </div>
+                  <div class="section-header">
+                    <center>
+                      <h3>Important dates</h3></center>
 
-            <p>
-              Submissions should include the following elements:
-            </p>
-            <ul>
-              <li>
-                Detailed contact information of all presenters (and indication
-                of the main contact person)
-              </li>
-              <li>
-                Brief biography (max. 2 paragraphs) for each presenter,
-                highlighting relevant experience in presenting tutorials,
-                teaching classes, etc.
-              </li>
-              <li>Title of the tutorial</li>
-              <li>Short abstract (300 words)</li>
-              <li>
-                Intended audience (introductory, intermediate, advanced) and
-                prerequisite knowledge or skills required
-              </li>
-              <li>Previous offering of the tutorial</li>
-              <li>
-                An extended abstract (no longer than 2 pages) that include the
-                following sections:
-                <ul>
-                  <li>Motivation</li>
-                  <li>Brief outline of the topics to be covered</li>
-                  <li>Links to related resources</li>
-                  <li>
-                    Type of support materials to be supplied to attendees.
-                  </li>
-                </ul>
-              </li>
-            </ul>
+                      <div class="tab-content row justify-content-center">
+                        <!-- Schdule Day 1 -->
+                        <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+                            <div class="row schedule-item">
+                                <div class="col-md-5"><time><h6>March 17, 2019</h6></time></div>
+                                <div class="col-md-7">
+                                    <h6><b>Submission deadline</b></h6>
+                                  <p> </p>
+                                </div>
+                             </div>
 
-            <h3>Important Dates</h3>
-            <ul>
-              <li>March 17, 2019 : Tutorial submission</li>
-              <li>March 31, 2019 : Acceptance notification</li>
-              <li>April 14, 2019 : Registration</li>
-              <li>April 29-30, 2019 : Conference</li>
-            </ul>
+                          <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                  <h6><b>Acceptance notification</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
 
-            <a
-              href="https://goo.gl/forms/R9da5M5hb0rodCm22"
-              class="btn btn-outline-primary btn-lg"
-              >Apply for Tutorial</a
-            >
+                           <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>April 14, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                <h6><b>Registration</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+
+                           <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                  <h6><b>Conference</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+                  </div>
+                </div>
+              </section>
+            </div>
           </div>
         </div>
       </section>
     </main>
+  <!--==========================
+    End main
+  ============================-->
 
     <!--==========================
     Footer
