--- a/pages/calls/papers.html
+++ b/pages/calls/papers.html
@@ -120,119 +120,168 @@
     <!-- #header -->
 
     <main id="main" class="main-page">
-      <!--==========================
-      papers Section
-    ============================-->
-      <section id="awards">
-        <div class="container wow fadeInUp">
+    <!--==========================
+      tutorials Section
+    ============================-->    
+    <section class="wow fadeInUp">
+        <br></br>
+        <div class="container">
+
           <div class="section-header">
             <h2>Call for Papers</h2>
           </div>
-          <div class="section-content">
-            <p>
-              The first edition of deep learning IndabaX-Morocco will be held at
-              the Faculty of Sciences and Techniques of Mohammedia in April
-              29-30, 2019. The workshop will offer a comprehensive technical
-              program addressing recent developments in research for Artificial
-              intelligence. There will also be socials to facilitate networking,
-              discussion of different career opportunities in AI, and sharing of
-              ideas to increase participation of Moroccan researchers in the
-              field. We invite all members of the AI community to attend the
-              event
-            </p>
-            <h3>Technical scope</h3>
-            <ul>
-              <li>
-                <b>Algorithms</b>: Active Learning; Multitask and Transfer
-                Learning; Online Learning; Representation Learning;
-                Semi-Supervised Learning; Similarity and Distance Learning;
-                Sparse Coding and Dimensionality Expansion; Unsupervised
-                Learning.
-              </li>
-              <li>
-                <b>Applications</b>: Body Pose, Face, and Gesture Analysis;
-                Computational Biology and Bioinformatics; Computational Social
-                Science; Computer Vision; Image Segmentation; Information
-                Retrieval; Natural Language Processing; Network Analysis; Object
-                Detection; Object Recognition; Privacy, Security; Quantitative
-                Finance and Econometrics; Recommender Systems; Robotics; Speech
-                Recognition; Sustainability; Systems Biology; Tracking and
-                Motion in Video;
-              </li>
-              <li>
-                <b>Deep Learning</b>: Adversarial Networks; Attention Models;
-                CNN Architectures; Deep Autoencoders; Generative Models;
-                Meta-Learning; Optimization for Deep Networks; Recurrent
-                Networks; Supervised Deep Networks; Visualization.
-              </li>
-              <li>
-                <b>Neuroscience and Cognitive Science</b>: Auditory Perception;
-                Brain Imaging; Brain-Computer Interfaces and Neural Prostheses;
-                Cognitive Science; Language for Cognitive Science; Problem
-                Solving; Reasoning; Visual Perception.
-              </li>
-              <li>
-                <b>Probabilistic Methods</b>: Bayesian Theory; Belief
-                Propagation; Causal Inference; Gaussian Processes; Graphical
-                Models; Hierarchical Models.
-              </li>
-              <li>
-                <b>Reinforcement Learning</b>: Decision and Control;
-                Exploration; Hierarchical RL; Markov Decision Processes;
-                Navigation; Planning.
-              </li>
-              <li>
-                <b>Theory</b>: Computational Complexity; Game Theory and
-                Computational Economics; Information Theory; Learning Theory;
-                Regularization; Spaces of Functions and Kernels; Statistical
-                Physics of Learning
-              </li>
-            </ul>
 
-            <h3>Submissions</h3>
+          <div class="row">
+            <div class="col-lg-7">
+                <div class="container wow fadeInUp">
+                  <div class="section-content">
+                      <p>
+                          The first edition of deep learning IndabaX-Morocco will be held at
+                          the Faculty of Sciences and Techniques of Mohammedia in April
+                          29-30, 2019. The workshop will offer a comprehensive technical
+                          program addressing recent developments in research for Artificial
+                          intelligence. There will also be socials to facilitate networking,
+                          discussion of different career opportunities in AI, and sharing of
+                          ideas to increase participation of Moroccan researchers in the
+                          field. We invite all members of the AI community to attend the
+                          event.
+                        </p>
+                        <h3>Technical scope</h3>
+                        <ul>
+                          <li>
+                            <b>Algorithms</b>: Active Learning; Multitask and Transfer
+                            Learning; Online Learning; Representation Learning;
+                            Semi-Supervised Learning; Similarity and Distance Learning;
+                            Sparse Coding and Dimensionality Expansion; Unsupervised
+                            Learning.
+                          </li>
+                          <li>
+                            <b>Applications</b>: Body Pose, Face, and Gesture Analysis;
+                            Computational Biology and Bioinformatics; Computational Social
+                            Science; Computer Vision; Image Segmentation; Information
+                            Retrieval; Natural Language Processing; Network Analysis; Object
+                            Detection; Object Recognition; Privacy, Security; Quantitative
+                            Finance and Econometrics; Recommender Systems; Robotics; Speech
+                            Recognition; Sustainability; Systems Biology; Tracking and
+                            Motion in Video;
+                          </li>
+                          <li>
+                            <b>Deep Learning</b>: Adversarial Networks; Attention Models;
+                            CNN Architectures; Deep Autoencoders; Generative Models;
+                            Meta-Learning; Optimization for Deep Networks; Recurrent
+                            Networks; Supervised Deep Networks; Visualization.
+                          </li>
+                          <li>
+                            <b>Neuroscience and Cognitive Science</b>: Auditory Perception;
+                            Brain Imaging; Brain-Computer Interfaces and Neural Prostheses;
+                            Cognitive Science; Language for Cognitive Science; Problem
+                            Solving; Reasoning; Visual Perception.
+                          </li>
+                          <li>
+                            <b>Probabilistic Methods</b>: Bayesian Theory; Belief
+                            Propagation; Causal Inference; Gaussian Processes; Graphical
+                            Models; Hierarchical Models.
+                          </li>
+                          <li>
+                            <b>Reinforcement Learning</b>: Decision and Control;
+                            Exploration; Hierarchical RL; Markov Decision Processes;
+                            Navigation; Planning.
+                          </li>
+                          <li>
+                            <b>Theory</b>: Computational Complexity; Game Theory and
+                            Computational Economics; Information Theory; Learning Theory;
+                            Regularization; Spaces of Functions and Kernels; Statistical
+                            Physics of Learning
+                          </li>
+                        </ul>
+            
+                        <h3>Submission guidelines</h3>
+            
+                        <p>
+                          We also welcome position papers and demos related to these areas.
+                          Work may be previously published, completed, or ongoing.
+                          Submissions will be peer-reviewed by at least 2 reviewers in the
+                          area. The workshop will not publish proceedings. We encourage
+                          researchers in the field to submit their work.
+                        </p>
+                        <p>
+                          All submissions must be in PDF format in
+                          <a
+                            href="https://nips.cc/Conferences/2018/PaperInformation/StyleFiles"
+                            >the NeurIPS "submission" style.</a
+                          >
+                          Submissions may be up to two pages including all figures and
+                          tables, with an additional page for references. The submissions
+                          should be in a single column. They should be typeset using
+                          11-point or larger fonts and should have at least 1-inch margin
+                          all around. Submissions that do not follow these guidelines risk
+                          being rejected without consideration of their merits.
+                        </p>
+                        <p>
+                          Submissions must state the research problem, motivation, and
+                          technical contribution.
+                        </p>
+                        <p>
+                          Each accepted paper will be presented as a poster. Each poster
+                          should be at most 36W x 48H inches or 90 x 122 cm.
+                        </p>
+                  </div>
+                </div>
+            </div>
+            <div class="col-lg-5">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <h2>
+                      <a
+                        href="https://goo.gl/forms/RXQegeSDzhrDShSf"
+                        class="btn btn-outline-primary btn-lg"
+                        >Submit a Paper</a
+                      >
+                    </h2>
+                  </div>
+                  <div class="section-header">
+                    <center>
+                      <h3>Important dates</h3></center>
 
-            <p>
-              We also welcome position papers and demos related to these areas.
-              Work may be previously published, completed, or ongoing.
-              Submissions will be peer-reviewed by at least 2 reviewers in the
-              area. The workshop will not publish proceedings. We encourage
-              researchers in the field to submit their work.
-            </p>
-            <p>
-              All submissions must be in PDF format in
-              <a
-                href="https://nips.cc/Conferences/2018/PaperInformation/StyleFiles"
-                >the NeurIPS "submission" style.</a
-              >
-              Submissions may be up to two pages including all figures and
-              tables, with an additional page for references. The submissions
-              should be in a single column. They should be typeset using
-              11-point or larger fonts and should have at least 1-inch margin
-              all around. Submissions that do not follow these guidelines risk
-              being rejected without consideration of their merits.
-            </p>
-            <p>
-              Submissions must state the research problem, motivation, and
-              technical contribution.
-            </p>
-            <p>
-              Each accepted paper will be presented as a poster. Each poster
-              should be at most 36W x 48H inches or 90 x 122 cm.
-            </p>
+                      <div class="tab-content row justify-content-center">
+                        <!-- Schdule Day 1 -->
+                        <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+                            <div class="row schedule-item">
+                                <div class="col-md-5"><time><h6>March 17, 2019</h6></time></div>
+                                <div class="col-md-7">
+                                    <h6><b>Submission deadline</b></h6>
+                                  <p> </p>
+                                </div>
+                             </div>
 
-            <h3>Important Dates</h3>
-            <ul>
-              <li>March 17, 2019 : Paper submission</li>
-              <li>March 31, 2019 : Acceptance notification</li>
-              <li>April 14, 2019 : Registration</li>
-              <li>April 29-30, 2019 : Conference</li>
-            </ul>
+                          <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                  <h6><b>Acceptance notification</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
 
-            <a
-              href="https://goo.gl/forms/RXQegeSDzhrDShSf2"
-              class="btn btn-outline-primary btn-lg"
-              >Submit a Paper</a
-            >
+                           <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>April 14, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                <h6><b>Registration</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+
+                           <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                  <h6><b>Conference</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+                  </div>
+                </div>
+              </section>
+            </div>
           </div>
         </div>
       </section>
