--- a/pages/calls/tutorials.html
+++ b/pages/calls/tutorials.html
@@ -190,7 +190,7 @@
                       <a
                         href="https://goo.gl/forms/R9da5M5hb0rodCm22"
                         class="btn btn-outline-primary btn-lg"
-                        >Apply for Tutorial</a
+                        >Propose a Tutorial</a
                       >
                     </h2>
                   </div>
