--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -118,71 +118,126 @@
     <!-- #header -->
 
     <main id="main" class="main-page">
-      <!--==========================
-      papers Section
-    ============================-->
-      <section id="awards">
-        <div class="container wow fadeInUp">
+    <!--==========================
+      tutorials Section
+    ============================-->    
+    <section class="wow fadeInUp">
+        <br></br>
+        <div class="container">
+
           <div class="section-header">
             <h2>Call for 3 Minutes Thesis (3MT)</h2>
           </div>
-          <div class="section-content">
-            <p>
-              If you are devoting or have devoted 3 or more years to your PhD,
-              you could devote 3 minutes to explain it to a more general public,
-              we challenge you!!
-            </p>
-            <p>
-              PhD students have three minutes to present their thesis and its
-              significance. It is an exercise for students to consolidate their
-              ideas so they can present them concisely to an audience
-              specialized in Machine learning. Together with scientific and
-              technical quality, IndabaX-Morocco wants to promote transversal
-              skills of PhD researchers such as oral and presentation skills,
-              also it wants to help PhDs to gain visibility of their work.
-            </p>
-            <p>
-              The presentation should be evident in all components of
-              communications, from the content to the format, and from the
-              imagery to the tone of voice.
-            </p>
-            <p>
-              The winner of the 3MT contest will opt a prize that will be
-              announced soon.
-            </p>
-            <p>
-              If you want to participate you just have to follow these rules for
-              competition. The 3MT competition will be performed according to
-              the following basic rules:
-              <li>Eligibility: any PhD student</li>
-              <li>
-                Every participant is required to submit a 1 page summary of his
-                PhD on googleform.
-              </li>
-            </p>
-            <p>
-              Each participant with an accepted summary will be contacted to
-              create a video that best explains his work in a language
-              appropriate to a general audience. The video should not be longer
-              than 3 minutes.
-            </p>
 
-            <h3>Important Dates</h3>
-            <ul>
-              <li>March 17, 2019 : Summary submission</li>
-              <li>March 31, 2019 : Acceptance notification</li>
-              <li>April 14, 2019 : Registration</li>
-              <li>April 29-30, 2019 : Conference</li>
-            </ul>
-            <a
-              href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
-              class="btn btn-outline-primary btn-lg"
-              >Apply for 3MT</a
+          <div class="row">
+            <div class="col-lg-7">
+                <div class="container wow fadeInUp">
+                  <div class="section-content">
+                      <p>
+                          If you are devoting or have devoted 3 or more years to your PhD,
+                          you could devote 3 minutes to explain it to a more general public,
+                          we challenge you!!
+                        </p>
+                        <p>
+                          PhD students have three minutes to present their thesis and its
+                          significance. It is an exercise for students to consolidate their
+                          ideas so they can present them concisely to an audience
+                          specialized in Machine learning. Together with scientific and
+                          technical quality, IndabaX-Morocco wants to promote transversal
+                          skills of PhD researchers such as oral and presentation skills,
+                          also it wants to help PhDs to gain visibility of their work.
+                        </p>
+                        <p>
+                          The presentation should be evident in all components of
+                          communications, from the content to the format, and from the
+                          imagery to the tone of voice.
+                        </p>
+                        <p>
+                          The winner of the 3MT contest will opt a prize that will be
+                          announced soon.
+                        </p>
+                        <p>
+                          If you want to participate you just have to follow these rules for
+                          competition. The 3MT competition will be performed according to
+                          the following basic rules:
+                          <ul>
+                            <li>Eligibility: any PhD student</li>
+                            <li>
+                              Every participant is required to submit a 1 page summary of his
+                              PhD on googleform.
+                            </li>
+                        </ul>
+                        </p>
+                        <p>
+                          Each participant with an accepted summary will be contacted to
+                          create a video that best explains his work in a language
+                          appropriate to a general audience. The video should not be longer
+                          than 3 minutes.
+                        </p>
+                  </div>
+                </div>
+            </div>
+            <div class="col-lg-5">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <h2>
+                      <a
+                        href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
+                        class="btn btn-outline-primary btn-lg"
+                        >Submit a Summary</a
+                      >
+                    </h2>
+                  </div>
+                  <div class="section-header">
+                    <center>
+                      <h3>Important dates</h3></center>
 
+                      <div class="tab-content row justify-content-center">
+                        <!-- Schdule Day 1 -->
+                        <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+                            <div class="row schedule-item">
+                                <div class="col-md-5"><time><h6>March 17, 2019</h6></time></div>
+                                <div class="col-md-7">
+                                    <h6><b>Submission deadline</b></h6>
+                                  <p> </p>
+                                </div>
+                             </div>
+
+                          <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                  <h6><b>Acceptance notification</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+
+                           <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>April 14, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                <h6><b>Registration</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+
+                           <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                  <h6><b>Conference</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+                  </div>
+                </div>
+              </section>
+            </div>
           </div>
         </div>
       </section>
     </main>
+  <!--==========================
+    End main
+  ============================-->
 
     <!--==========================
     Footer
