--- a/index1985.html
+++ b/index1985.html
@@ -111,12 +111,15 @@
           <div class="col-lg-6">              
             <h2>About The Event</h2>
             <p class="text-justify">        
-Deep Learning IndabaX-Morocco is a two days event that will bring advanced knowledge of Machine Learning and Deep Learning to students, researchers and industry professionals. The event will bring together experts from across the country to expose students
-to state-of-the-art methods and practical skills.
+<b>IndabaX Morocco</b> is the Moroccan edition of the <a href="http://www.deeplearningindaba.com">African Machine Learning IndabaX</a>. For this very first edition,
+the organizing committee is pleased to invite you to a two days event that will bring together students, researcher and industry professionals 
+from Morocco and abroad to discuss and share their works and contributions to the field of AI in general and Machine Learning in particular.
 <br>
-IndabaX-Morrocco is a way to experiment with the ways in which we can strengthen our Machine Learning community, and to allow more people to contribute to the conversation.
+IndabaX Morrocco is also a golden opportunity to experiment with the ways in which we can strengthen the Moroccan Machine Learning community, and place Morocco among
+the leading countries in AI related fields in Africa.
 <br>
-This event will be organized for the first time in Morocco at the Faculty of Sciences and Techniques of Mohammedia (FSTM) in order to spread knowledge and builds capacity in machine learning.
+The 2019 edition will be held in the Faculty of Sciences and Techniques of Mohammedia (FSTM), numerous moroccan experts from the field of AI participated in the making of the
+program and the several activities. We wish this edition will be the starting point for several editions to come!
 <br>
 <br>
 <b>Objectives:</b>
@@ -149,7 +152,6 @@ This event will be organized for the first time in Morocco at the Faculty of Sci
                         <div class="container wow fadeInUp">
                           <div class="section-header">
                             <h2>Important news</h2>
-                            <p>Here is our news</p>
                           </div>
                           <div>
                               <div class="news-header">
