--- a/index1985.html
+++ b/index1985.html
@@ -115,11 +115,11 @@
 the organizing committee is pleased to invite you to a two days event that will bring together students, researcher and industry professionals 
 from Morocco and abroad to discuss and share their works and contributions to the field of AI in general and Machine Learning in particular.
 <br>
-IndabaX Morrocco is also a golden opportunity to experiment with the ways in which we can strengthen the Moroccan Machine Learning community, and place Morocco among
-the leading countries in AI related fields in Africa.
+IndabaX Morocco is also a golden opportunity to experiment with the ways in which we can strengthen the Moroccan Machine Learning community, and place Morocco among
+the leading African countries in AI related fields.
 <br>
 The 2019 edition will be held in the Faculty of Sciences and Techniques of Mohammedia (FSTM), numerous moroccan experts from the field of AI participated in the making of the
-program and the several activities. We wish this edition will be the starting point for several editions to come!
+program and the several activities. We wish for this edition to be the starting point for several editions to come!
 <br>
 <br>
 <b>Objectives:</b>
@@ -348,10 +348,8 @@ program and the several activities. We wish this edition will be the starting po
               <strong>Email:</strong> indabaXmorocco@gmail.com<br>
             </p>
             <div class="social-links">
-                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                <a href="twitter.com/indabaXmorocco" class="twitter"><i class="fa fa-twitter"></i></a>
                 <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
                 <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
               </div>
           </div>
