--- a/index.html
+++ b/index.html
@@ -125,11 +125,12 @@ The 2019 edition will be held in the Faculty of Sciences and Techniques of Moham
 program and the several activities. We wish for this edition to be the starting point for several editions to come!
 <br>
 <br>
-<b>Objectives:</b>
+<b>Main objectives of the IndabaX Morocco:</b>
 <ol>
-<li> Promote Artificial Intelligence in Universities and Companies.
-<li> Build a dynamic AI community to educate, connect and support AI practitioners.
-<li> Learn from researchers and industrials
+<li> Advance the state of R&D in the field of Artificial Intelligence in Morocco 
+<li> Build a dynamic Moroccan AI community with the aim to educate, connect and support AI practitioners
+<li> Fostering more collaboration between academia and industry
+<li> Increase the number of Moroccan representation in top AI conferences
 </ol>
           </div>
           <div class="col-lg-3">
