--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ IndabaX Morocco is also a golden opportunity to experiment with the ways in whic
 the leading African countries in AI related fields.
 <br>
 The 2019 edition will be held in the Faculty of Sciences and Techniques of Mohammedia (FSTM), numerous moroccan experts from the field of AI participated in the making of the
-program and the several activities. We wish for this edition to be the starting point for several editions to come!
+program and of the several activities. More details about the activities are descibed throughout this website.
 <br>
 <br>
 <b>Main objectives of the IndabaX Morocco:</b>
