--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
           <div class="col-lg-6">              
             <h2>About The Event</h2>
             <p class="text-justify">        
-<b>IndabaX Morocco</b> is an Artificial Intelligence oriented event supported by the <a href="http://www.deeplearningindaba.com/indabax.html">African Machine Learning IndabaX</a>. For this very first edition,
+<b>IndabaX Morocco</b>
+The Deep Learning IndabaX Morocco 2019, is the first <b>Artificial Intelligence</b> oriented event supported by <a href="http://www.deeplearningindaba.com/indabax.html">the African Deep Learning Indaba</a>. 
+It is a locally-organized Indaba that aims to empower the community of Artificial Intelligence in Morocco. For this very first edition,
 the organizing committee is pleased to invite you to a two days event that will bring together students, researcher and industry professionals 
 from Morocco and abroad to discuss and share their works and contributions to the field of AI in general and Machine Learning in particular.
 <br>
