--- a/pages/event/awards.html
+++ b/pages/event/awards.html
@@ -87,33 +87,76 @@
 
 
   <main id="main" class="main-page">
-     <!--==========================
-      Awards Section
-    ============================-->
-    <section id="awards">
-        <div class="container wow fadeInUp">
+    <!--==========================
+      tutorials Section
+    ============================-->    
+    <section class="wow fadeInUp">
+        <br></br>
+        <div class="container">
+
           <div class="section-header">
             <h2>Awards</h2>
-            <p>List of awards</p>
           </div>
-          <div class="container">
-            <p> A number of awards will recognize the best X, X. </p>
-              <h4> <strong> Award1 : </strong> </h4>
-              <ul>
-                <li>CriticatOne</li>
-                <li>CriticatTwo</li>
-                <li>CriticatTree</li>
-              </ul>
-              <h4> <strong> Award2 : </strong></h4>
-              <ul>
-                <li>CriticatOne</li>
-                <li>CriticatTwo</li>
-                <li>CriticatTree</li>
-              </ul>
-           </div>
+
+          <div class="row">
+            
+            <div class="col-lg-4">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center><h3>
+                      Best Poster
+                    </h3></center>
+                  </div>
+                  <div class="section-content">
+                    <center><p>
+                      The winner of the best poster award will be given a ticket to the 
+                      main <a href="http://www.deeplearningindaba.com/indaba-2019.html"> 
+                      Deep Learning Indaba</a> that will be held in Nairobi this year.
+                    </p></center>               
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div class="col-lg-4">
+              <section id="schedule" class="section-without-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center><h3>
+                      Best 3MT
+                    </h3></center>
+                  </div>
+                  <div class="section-content">
+                    <center><p>
+                      TBA
+                    </p> </center>                 
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div class="col-lg-4">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center><h3>
+                      Best Score
+                    </h3></center>
+                  </div>
+                  <div class="section-content">
+                      <center><p>
+                      TBA
+                    </p></center>               
+                  </div>
+                </div>
+              </section>
+            </div>
+          </div>
         </div>
       </section>
     </main>
+  <!--==========================
+    End main
+  ============================-->
 
   <!--==========================
     Footer
