--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
             <p class="text-justify">        
 <b>Deep Learning IndabaX Morocco 2019</b> is the first <b>Artificial Intelligence</b> oriented event supported by <a href="http://www.deeplearningindaba.com/indabax.html">the African Deep Learning Indaba</a>. 
 It is a locally-organized Indaba that aims to empower the community of Artificial Intelligence in Morocco. For this very first edition,
-the organizing committee is pleased to invite you to a two days event that will bring together students, researcher and industry professionals 
+the organizing committee is pleased to invite you to a two days event that will bring together students, researchers and industry professionals 
 from Morocco and abroad to discuss and share their works and contributions to the field of AI in general and Machine Learning in particular.
 <br>
 IndabaX Morocco is also a golden opportunity to experiment with the ways in which we can strengthen the Moroccan Machine Learning community, and place Morocco among
 the leading African countries in AI related fields.
 <br>
-The 2019 edition will be held in the Faculty of Sciences and Techniques of Mohammedia (FSTM), numerous moroccan experts from the field of AI participated in the making of the
-program and of the several activities. More details about the activities are descibed throughout this website.
+The 2019 edition will be held at the Faculty of Sciences and Techniques of Mohammedia (FSTM). Numerous moroccan experts from the field of AI participated in the making of the
+program and of the several activities. More details about the activities are described throughout this website.
 <br>
 <br>
 <b>Main objectives of the IndabaX Morocco:</b>
