--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ from Morocco and abroad to discuss and share their works and contributions to th
 IndabaX Morocco is also a golden opportunity to experiment with the ways in which we can strengthen the Moroccan Machine Learning community, and place Morocco among
 the leading African countries in AI related fields.
 <br>
-The 2019 edition will be held at the Faculty of Sciences and Techniques of Mohammedia (FSTM). Numerous moroccan experts from the field of AI participated in the making of the
-program and of the several activities. More details about the activities are described throughout this website.
+The 2019 edition will be held at the Faculty of Sciences and Techniques of Mohammedia (FSTM). Numerous moroccan researchers from the field of AI participated in the making of the
+program and of the several activities. More details are described throughout this website.
 <br>
 <br>
 <b>Main objectives of the IndabaX Morocco:</b>
