--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ program and of the several activities. More details are described throughout thi
 <ol>
 <li> Advance the state of R&D in the field of Artificial Intelligence in Morocco 
 <li> Build a dynamic Moroccan AI community with the aim to educate, connect and support AI practitioners
-<li> Fostering more collaboration between academia and industry
+<li> Foster more collaboration between academia and industry
 <li> Increase the number of Moroccan representation in top AI conferences
 </ol>
           </div>
