--- a/pages/event/Awards.html
+++ b/pages/event/Awards.html
@@ -123,7 +123,7 @@
                 <div class="container wow fadeInUp">
                   <div class="section-header">
                     <center><h3>
-                      Best 3MT
+                      3MT Winner
                     </h3></center>
                   </div>
                   <div class="section-content">
@@ -139,7 +139,7 @@
                 <div class="container wow fadeInUp">
                   <div class="section-header">
                     <center><h3>
-                      Best Score
+                      Data Challenge Winners
                     </h3></center>
                   </div>
                   <div class="section-content">
